# aml-at2-openweatherapi

./: Dockerfile  README.md  app.py  github.txt  pyproject.toml  requirements.txt
app/: main.py
models/precipitation_fall/: ridge_model.joblib
models/rain_or_not/: feature_cols.json  logreg_model.joblib
